objects/Snapshot_AR_Dashboard__c.object
<CustomObject>
    <description>This is a tarrget object for 3 Analytic Snapshots that capture Activity, Open Opportunity and Onboarded Opportunity summaries via 3 individual Summary Reports.</description>
    <fields>
        <fullName>ActivityCount__c</fullName>
        <label>ActivityCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_GDC__c</fullName>
        <description>Actual GDC of the Opportunity</description>
        <label>Actual GDC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Closed Date of Task</description>
        <label>Activity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Created Date of Opportunity</description>
        <label>Oppty Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>IF(NOT(ISBLANK(Created_Date__c)),Created_Date__c,(IF(NOT(ISBLANK( FINRA_Effective_Date__c )), FINRA_Effective_Date__c,(IF(NOT(ISBLANK(  Closed_Date__c  )), Closed_Date__c,Today())))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FINRA_Effective_Date__c</fullName>
        <description>FINRA Effective Date of Opportunity</description>
        <label>FINRA Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityCount__c</fullName>
        <description>Count of records</description>
        <label>OpportunityCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Snapshot AR Dashboard</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recruiter</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot AR Dashboard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>